--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "jest-preset-angular": "^14.0.0",
     "lint-staged": "^15.4.3",
     "ng-packagr": "^19.1.1",
-    "prettier": "^3.4.2",
+    "prettier": "3.5.1",
     "prettier-eslint": "^16.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
