--- a/angular.json
+++ b/angular.json
@@ -31,10 +31,7 @@
             "browserTarget": "ion:build",
             "compodoc": false,
             "port": 6006,
-            "styles": [
-              "projects/ion/src/styles/index.scss",
-              "./node_modules/@angular/cdk/overlay-prebuilt.css"
-            ]
+            "styles": ["projects/ion/src/styles/index.scss", "./node_modules/@angular/cdk/overlay-prebuilt.css"]
           }
         },
         "build-storybook": {
@@ -44,10 +41,7 @@
             "browserTarget": "ion:build",
             "compodoc": false,
             "outputDir": "dist/storybook/ion",
-            "styles": [
-              "projects/ion/src/styles/index.scss",
-              "./node_modules/@angular/cdk/overlay-prebuilt.css"
-            ]
+            "styles": ["projects/ion/src/styles/index.scss", "./node_modules/@angular/cdk/overlay-prebuilt.css"]
           }
         }
       }
