feat: create dropdown directive (#146)
* feat(dropdown): directive and component added

* test: dropdown component tests added

* test: directive tests added

* refactor: type docs added and tests refactor

* fix: no data padding and item icon color

* chore: install angular cdk

* fix: event emission on hover

* docs: dropdown stories added

* fix: cdk overlay css import build error

* refactor: remove unecessary import and methods improved

* fix: lint

---------

Co-authored-by: Iury Nogueira <nogueiraiury20@gmail.com>

--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,7 @@
             "browserTarget": "ion:build",
             "compodoc": false,
             "port": 6006,
-            "styles": ["projects/ion/src/styles/index.scss"]
+            "styles": ["projects/ion/src/styles/index.scss", "./node_modules/@angular/cdk/overlay-prebuilt.css"]
           }
         },
         "build-storybook": {
@@ -41,7 +41,7 @@
             "browserTarget": "ion:build",
             "compodoc": false,
             "outputDir": "dist/storybook/ion",
-            "styles": ["projects/ion/src/styles/index.scss"]
+            "styles": ["projects/ion/src/styles/index.scss", "./node_modules/@angular/cdk/overlay-prebuilt.css"]
           }
         }
       }
