--- a/projects/ion/package.json
+++ b/projects/ion/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.4",
   "peerDependencies": {
     "@angular/common": "^19.0.0",
-    "@angular/core": "^19.0.0"
+    "@angular/core": "^19.0.0",
+    "@angular/cdk": "^19.0.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
