--- a/package.json
+++ b/package.json
@@ -24,15 +24,15 @@
   },
   "dependencies": {
     "@angular/animations": "^19.1.3",
+    "@angular/cdk": "^19.1.3",
     "@angular/common": "^19.1.3",
     "@angular/compiler": "^19.1.3",
     "@angular/core": "^19.1.3",
     "@angular/forms": "^19.1.3",
-    "@angular/cdk": "^19.1.3",
     "@angular/platform-browser": "^19.1.3",
     "@angular/platform-browser-dynamic": "^19.1.3",
     "@angular/router": "^19.1.3",
-    "rxjs": "~7.8.0",
+    "rxjs": "^8.0.0-alpha.14",
     "tslib": "^2.8.1",
     "zone.js": "~0.15.0"
   },
