--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,10 @@
             "browserTarget": "ion:build",
             "compodoc": false,
             "port": 6006,
-            "styles": ["projects/ion/src/styles/index.scss", "./node_modules/@angular/cdk/overlay-prebuilt.css"]
+            "styles": [
+              "projects/ion/src/styles/index.scss",
+              "./node_modules/@angular/cdk/overlay-prebuilt.css"
+            ]
           }
         },
         "build-storybook": {
@@ -41,7 +44,10 @@
             "browserTarget": "ion:build",
             "compodoc": false,
             "outputDir": "dist/storybook/ion",
-            "styles": ["projects/ion/src/styles/index.scss", "./node_modules/@angular/cdk/overlay-prebuilt.css"]
+            "styles": [
+              "projects/ion/src/styles/index.scss",
+              "./node_modules/@angular/cdk/overlay-prebuilt.css"
+            ]
           }
         }
       }
