--- a/package.json
+++ b/package.json
@@ -23,42 +23,44 @@
     "node": "20.18.x"
   },
   "dependencies": {
-    "@angular/animations": "^19.1.3",
-    "@angular/cdk": "^19.1.3",
-    "@angular/common": "^19.1.3",
-    "@angular/compiler": "^19.1.3",
-    "@angular/core": "^19.1.3",
-    "@angular/forms": "^19.1.3",
-    "@angular/platform-browser": "^19.1.3",
-    "@angular/platform-browser-dynamic": "^19.1.3",
-    "@angular/router": "^19.1.3",
+    "@angular/animations": "^19.2.2",
+    "@angular/cdk": "^19.2.3",
+    "@angular/common": "^19.2.2",
+    "@angular/compiler": "^19.2.2",
+    "@angular/core": "^19.2.2",
+    "@angular/forms": "^19.2.2",
+    "@angular/platform-browser": "^19.2.2",
+    "@angular/platform-browser-dynamic": "^19.2.2",
+    "@angular/router": "^19.2.2",
     "rxjs": "~7.8.0",
+    "string-width": "7.2.0",
     "tslib": "^2.8.1",
+    "wrap-ansi": "9.0.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.1.4",
+    "@angular-devkit/build-angular": "^19.2.3",
     "@angular-eslint/builder": "^19.0.2",
     "@angular-eslint/eslint-plugin": "^19.0.2",
     "@angular-eslint/eslint-plugin-template": "^19.0.2",
     "@angular-eslint/schematics": "^19.0.2",
     "@angular-eslint/template-parser": "^19.0.2",
-    "@angular/cli": "^19.1.4",
-    "@angular/compiler-cli": "^19.1.3",
+    "@angular/cli": "^19.2.3",
+    "@angular/compiler-cli": "^19.2.2",
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.5.0",
-    "@storybook/addon-essentials": "^8.5.2",
-    "@storybook/addon-interactions": "^8.5.2",
-    "@storybook/addon-links": "^8.5.2",
-    "@storybook/angular": "^8.5.2",
-    "@storybook/blocks": "^8.5.2",
-    "@storybook/test": "^8.5.2",
+    "@storybook/addon-essentials": "^8.6.7",
+    "@storybook/addon-interactions": "^8.6.7",
+    "@storybook/addon-links": "^8.6.7",
+    "@storybook/angular": "^8.6.7",
+    "@storybook/blocks": "^8.6.7",
+    "@storybook/test": "^8.6.7",
     "@testing-library/angular": "^17.3.5",
     "@types/jest": "^29.5.14",
-    "@typescript-eslint/eslint-plugin": "^8.22.0",
-    "@typescript-eslint/parser": "^8.22.0",
+    "@typescript-eslint/eslint-plugin": "^8.26.1",
+    "@typescript-eslint/parser": "^8.26.1",
     "chromatic": "^11.25.1",
     "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.0.1",
@@ -66,13 +68,13 @@
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-preset-angular": "^14.0.0",
-    "lint-staged": "^15.4.3",
+    "lint-staged": "^15.5.0",
     "ng-packagr": "^19.1.1",
     "prettier": "3.5.3",
     "prettier-eslint": "^16.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "storybook": "^8.5.2",
+    "storybook": "^8.6.7",
     "ts-node": "^10.9.2",
     "typescript": "~5.8.2"
   },
