--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
     "node": "20.18.x"
   },
   "dependencies": {
-    "@angular/animations": "^19.2.5",
+    "@angular/animations": "^20.0.6",
     "@angular/cdk": "^19.2.8",
-    "@angular/common": "^19.2.5",
-    "@angular/compiler": "^19.2.5",
-    "@angular/core": "^19.2.5",
-    "@angular/forms": "^19.2.5",
-    "@angular/platform-browser": "^19.2.5",
-    "@angular/platform-browser-dynamic": "^19.2.5",
-    "@angular/router": "^19.2.5",
+    "@angular/common": "^20.0.6",
+    "@angular/compiler": "^20.0.6",
+    "@angular/core": "^20.0.6",
+    "@angular/forms": "^20.0.6",
+    "@angular/platform-browser": "^20.0.6",
+    "@angular/platform-browser-dynamic": "^20.0.6",
+    "@angular/router": "^20.0.6",
     "rxjs": "~7.8.0",
     "string-width": "7.2.0",
     "tslib": "^2.8.1",
@@ -39,14 +39,14 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.6",
     "@angular-eslint/builder": "^19.3.0",
     "@angular-eslint/eslint-plugin": "^19.3.0",
     "@angular-eslint/eslint-plugin-template": "^19.3.0",
     "@angular-eslint/schematics": "^19.3.0",
     "@angular-eslint/template-parser": "^19.3.0",
-    "@angular/cli": "^19.2.6",
-    "@angular/compiler-cli": "^19.2.5",
+    "@angular/build": "^20.0.5",
+    "@angular/cli": "^20.0.5",
+    "@angular/compiler-cli": "^20.0.6",
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
     "@eslint/eslintrc": "^3.3.1",
@@ -69,14 +69,14 @@
     "jest": "^29.7.0",
     "jest-preset-angular": "^14.5.4",
     "lint-staged": "^15.5.0",
-    "ng-packagr": "^19.2.1",
+    "ng-packagr": "^20.0.1",
     "prettier": "3.5.3",
     "prettier-eslint": "^16.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "storybook": "^8.6.12",
     "ts-node": "^10.9.2",
-    "typescript": "~5.8.2"
+    "typescript": "~5.8.3"
   },
   "config": {
     "commitizen": {
