--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-eslint/builder": "^19.3.0",
-    "@angular-eslint/eslint-plugin": "^19.3.0",
-    "@angular-eslint/eslint-plugin-template": "^19.3.0",
-    "@angular-eslint/schematics": "^19.3.0",
-    "@angular-eslint/template-parser": "^19.3.0",
+    "@angular-eslint/builder": "^20.1.1",
+    "@angular-eslint/eslint-plugin": "^20.1.1",
+    "@angular-eslint/eslint-plugin-template": "^20.1.1",
+    "@angular-eslint/schematics": "^20.1.1",
+    "@angular-eslint/template-parser": "^20.1.1",
     "@angular/build": "^20.0.5",
     "@angular/cli": "^20.0.5",
     "@angular/compiler-cli": "^20.0.6",
@@ -51,18 +51,14 @@
     "@commitlint/config-conventional": "^19.6.0",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.23.0",
-    "@storybook/addon-essentials": "^8.6.12",
-    "@storybook/addon-interactions": "^8.6.12",
-    "@storybook/addon-links": "^8.6.12",
-    "@storybook/angular": "^8.6.12",
-    "@storybook/blocks": "^8.6.12",
-    "@storybook/test": "^8.6.12",
+    "@storybook/addon-links": "^9.0.15",
+    "@storybook/angular": "^9.0.15",
     "@testing-library/angular": "^17.4.0",
     "@types/jest": "^29.5.14",
-    "@typescript-eslint/eslint-plugin": "^8.29.0",
-    "@typescript-eslint/parser": "^8.29.0",
+    "@typescript-eslint/eslint-plugin": "^8.33.1",
+    "@typescript-eslint/parser": "^8.33.1",
     "chromatic": "^11.28.0",
-    "eslint": "^9.23.0",
+    "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.6",
     "husky": "^9.1.7",
@@ -74,9 +70,11 @@
     "prettier-eslint": "^16.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "storybook": "^8.6.12",
+    "storybook": "^9.0.15",
     "ts-node": "^10.9.2",
-    "typescript": "~5.8.3"
+    "typescript": "~5.8.3",
+    "eslint-plugin-storybook": "9.0.15",
+    "@storybook/addon-docs": "^9.0.15"
   },
   "config": {
     "commitizen": {
