--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@commitlint/config-conventional": "^19.6.0",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.23.0",
+    "@storybook/addon-docs": "^9.0.15",
     "@storybook/addon-links": "^9.0.15",
     "@storybook/angular": "^9.0.15",
     "@testing-library/angular": "^17.4.0",
@@ -61,9 +62,10 @@
     "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-storybook": "9.0.15",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
-    "jest-preset-angular": "^14.5.4",
+    "jest-preset-angular": "^14.6.0",
     "lint-staged": "^15.5.0",
     "ng-packagr": "^20.0.1",
     "prettier": "3.5.3",
@@ -72,9 +74,7 @@
     "react-dom": "^19.1.0",
     "storybook": "^9.0.15",
     "ts-node": "^10.9.2",
-    "typescript": "~5.8.3",
-    "eslint-plugin-storybook": "9.0.15",
-    "@storybook/addon-docs": "^9.0.15"
+    "typescript": "~5.8.3"
   },
   "config": {
     "commitizen": {
