--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "private": true,
   "engines": {
-    "node": "20.18.x"
+    "node": "22.16.0"
   },
   "dependencies": {
     "@angular/animations": "^19.2.5",
@@ -67,6 +67,7 @@
     "eslint-plugin-prettier": "^5.2.6",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.4",
     "jest-preset-angular": "^14.5.4",
     "lint-staged": "^15.5.0",
     "ng-packagr": "^19.2.1",
